--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,7 @@
 		"skipLibCheck": true,
 		"sourceMap": true,
     "allowImportingTsExtensions": true,
-		"strict": true
+		"strict": false,
 	}
 	// Path aliases are handled by https://kit.svelte.dev/docs/configuration#alias
 	//
